--- a/utils/gensim_utils.html
+++ b/utils/gensim_utils.html
@@ -1060,7 +1060,22 @@ from gensim.corpora import Dictionary
 import pdb
 import pandas as pd
 from gensim.models import Word2Vec
-from utils import blacklab</p>
+from utils import blacklab, text
+from gensim import utils
+import string
+from nltk.corpus import stopwords
+import constants
+from gensim.models.phrases import Phrases, Phraser
+from itertools import chain
+from gensim.models.wrappers import LdaMallet
+import numpy as np
+from gensim.models import CoherenceModel
+import matplotlib
+matplotlib.use(&lsquo;PS&rsquo;)
+import matplotlib.pyplot as plt
+import pyLDAvis
+import pyLDAvis.gensim
+from gensim.models.wrappers import ldamallet</p>
 <p>def initialize_gensim_dictionary(text):
     dct = Dictionary(text)<br />
     return dct</p>
@@ -1085,28 +1100,167 @@ else:
 <p>def load_gensim_dictionary_model(path_to_gensim_dictionary_model):
     dct=Dictionary.load(path_to_gensim_dictionary_model)
     return dct</p>
-<p>def build_gensim_synset_model_from_sentences(sentences):
-    model = Word2Vec(sentences, size=100, window=5, min_count=1, workers=4)
+<p>def build_gensim_synset_model_from_sentences(sentences,window=5):
+    model = Word2Vec(sentences, size=100, window=5, min_count=5, workers=4,trim_rule=trim_rule)
     return model</p>
+<p>def trim_rule(word,count,min_count):
+    if (word[0] not in string.ascii_uppercase + string.ascii_lowercase) or (word in set(stopwords.words(&lsquo;english&rsquo;)) ):
+        return utils.RULE_DISCARD</p>
 <p>def initialize_gensim_synset_model_with_dictionary(dictionary):
     model = Word2Vec().build_vocab_from_freq(dictionary)
     return model</p>
-<p>def main():
-    ids=[&lsquo;HVT-1&rsquo;,&rsquo;HVT-2&rsquo;]
-    model=build_gensim_synset_model_from_sentences(blacklab.iterable_results(&lsquo;<s/>&lsquo;,document_ids=ids))
-    pdb.set_trace
-    &lsquo;&rsquo;&lsquo;
-    model=Word2Vec.build_vocab(vocabulary)</p>
-<div class="codehilite"><pre>pdb.set_trace()
-dct=initialize_gensim_dictionary(text_1+text_2)
-corpus = [dct.doc2bow(text) for text in text_1+text_2]
-word_freq_dic=[[(dct[id], freq) for id, freq in cp] for cp in corpus]
-pdb.set_trace()
-model=initialize_gensim_synset_model_with_dictionary(dct)
+<p>def find_similar_terms(term,path_to_model,n=10):
+    model=Word2Vec.load(path_to_model)
+    similar_terms=model.wv.most_similar(term,topn=n)
+    return similar_terms</p>
+<p>def build_gensim_phrase_model_from_sentences(sentences):
+    phrases = Phrases(sentences, min_count=5, threshold=2)
+    return phrases</p>
+<p>def identify_phrases(sentence,path_to_gensim_phrase_model):
+    phrase_model = Phrases.load(path_to_gensim_phrase_model)
+    phraser_model=Phraser(phrase_model)
+    new_sentence=phraser_model[sentence]
+    return new_sentence</p>
+<p>def train_lda_topic_model_with_mallet(texts,path_mallet, num_topics=50, scoring = False, start = 2 , step = 3):
+    preprocessed_corpus = []
+    for i,text in enumerate(texts):
+        if i==0:
+            #todo filter here
+            text = text.split()
+            filtered_text = [word for word in text if (word[0] in string.ascii_uppercase + string.ascii_lowercase)]
+            filtered_text = [word for word in filtered_text if (word not in set(stopwords.words(&lsquo;english&rsquo;)))]
+            preprocessed_corpus.append(filtered_text)
+            dct=initialize_gensim_dictionary([filtered_text])
+        else:
+            text = text.split()
+            filtered_text = [word for word in text if ((word[0] in string.ascii_uppercase + string.ascii_lowercase))]
+            filtered_text = [word for word in filtered_text if (word not in set(stopwords.words(&lsquo;english&rsquo;)))]
+            preprocessed_corpus.append(filtered_text)
+            add_documents_to_gensim_dictionary(dct,[filtered_text])
+    #this is problematic here, I should not use texts when building the gensim corpus
+    gensim_corpus = [dct.doc2bow(bag_of_word.split()) for bag_of_word in texts]
+    if scoring:</p>
+<div class="codehilite"><pre>    coherence_values = []
 
-dct=initialize_gensim_dictionary(text_1)
-add_documents_to_gensim_dictionary(dct,text_2)
-get_document_frequency_in_dictionary(dct)
-print (dct.token2id)
-pdb.set_trace()&#39;&#39;&#39;
+    for n in range(start, num_topics, step):
+        lda = LdaMallet(constants.PATH_TO_MALLET, gensim_corpus, id2word=dct, num_topics=n)
+        coherencemodel = CoherenceModel(model=lda, texts=preprocessed_corpus, dictionary=dct, coherence=&#39;c_v&#39;)
+        coherence_values.append(coherencemodel.get_coherence())
+
+    return coherence_values
+
+
+else:
+    lda = LdaMallet(constants.PATH_TO_MALLET, gensim_corpus, id2word=dct,num_topics=num_topics)
+    # from gensim.models.wrappers import ldamallet
+    #lda_model = ldamallet.malletmodel2ldamodel(lda)
+    #vis = pyLDAvis.gensim.prepare(lda_model, gensim_corpus, dct)
+    #pyLDAvis.save_html(vis , &#39;test.html&#39;)
+    return {&#39;model&#39;:lda,&#39;corpus&#39; : gensim_corpus}
+</pre></div>
+
+
+<p>def post_process_result_of_lda_topic_model(lda_model,gensim_corpus,document_collection,document_collection_filtered,n_closest = 15):
+    #Prepare containers to store results
+    #Container to keep the document topic matrix
+    n_closest = - n_closest
+    document_topic_matrix=[]
+    #Container to keep topics and the closest texts to each topic
+    topic_closest_doc_with_topics_words = []
+    #Container to keep topics
+    all_topics = lda_model.show_topics(50)</p>
+<div class="codehilite"><pre>#Create an LDA corpus from the original gensim corpus
+lda_corpus = lda_model[gensim_corpus]
+
+#Iterate through the lda corpus and create the document topic matrix
+for i,documents in enumerate(lda_corpus):
+    #Data returned is not proper numpy matrix
+    document_topic_matrix.append(np.array([elements[1] for elements in documents]))
+
+#Create the proper numpy matrix
+document_topic_matrix=np.vstack(document_topic_matrix)
+
+#Find the closest texts to a given topic
+#Iterate through the transpose of the document topic matrix
+for i,element in enumerate(document_topic_matrix.T):
+    #Identify the id of 15 closest texts of each topic
+    closest=element.argsort(axis=0)[n_closest:][::-1]
+    #Create a container to keep each text with the id above
+    texts = []
+    for element in closest:
+        texts.append({&#39;matched_text&#39;:document_collection_filtered[element],&#39;matched_text_words&#39;:document_collection[element][&#39;match_word&#39;],&#39;testimony_id&#39;:document_collection[element][&#39;testimony_id&#39;]})
+    #Append them to container
+    topic_closest_doc_with_topics_words.append({&#39;texts&#39;:texts,&#39;topic_words&#39;:all_topics[i]})
+return {&#39;topic_documents&#39;:topic_closest_doc_with_topics_words , &#39;document_topic_matrix&#39; : document_topic_matrix}
+</pre></div>
+
+
+<p>def write_topics_texts_to_file(topics_texts,path_to_file,query_parameters = None):</p>
+<div class="codehilite"><pre>output_text = &#39;&#39;
+if query_parameters:
+    for element in query_parameters:
+        output_text = output_text + str(element[0])+&#39;: &#39;+str(element[1]) + &#39;\n&#39;
+for i,element in enumerate(topics_texts):
+    topic_words =  &#39; &#39;.join([str(topic) for topic in element[&#39;topic_words&#39;]])
+    output_text = output_text + str(i) + &#39;. &#39;+ topic_words +&#39;:&#39; + &#39;\n\n&#39;
+    for f,document in enumerate(element[&#39;texts&#39;]):
+        output_text = output_text + str(f)+&#39;. &#39;+ document[&#39;testimony_id&#39;] + &#39;.\n&#39;
+        output_text = output_text + &#39; Original text:\n&#39;+document[&#39;matched_text_words&#39;] + &#39;\n\n&#39;
+        output_text = output_text + &#39; Input text:\n&#39;+document[&#39;matched_text&#39;] + &#39;\n\n&#39;
+    output_text = output_text + &#39;-----------------------\n\n&#39;
+f = open(path_to_file,&#39;w&#39;)
+f.write(output_text)
+f.close()
+</pre></div>
+
+
+<p>def visualize_topic_scoring(scores,limit,start,step,path_to_output_file):
+    x = range(start, limit, step)
+    plt.plot(x, scores)
+    plt.xlabel(&ldquo;Num Topics&rdquo;)
+    plt.ylabel(&ldquo;Coherence score&rdquo;)
+    plt.legend((&ldquo;coherence_values&rdquo;), loc=&rsquo;best&rsquo;)
+    plt.savefig(path_to_output_file)</p>
+<p>def main():
+    #todo: elimination of searched terms should happen later, eliminate stop words
+    document_collection_original=blacklab.search_blacklab(&lsquo;<s/> <s/> (<s/> containing [lemma=&rdquo;naked&rdquo; | lemma=&rdquo;undress&rdquo; | lemma=&rdquo;strip&rdquo;]) <s/> <s/>&lsquo;,window=0,lemma=True, include_match=True)
+    #use the phraser model
+    phraser_model = Phraser(Phrases.load(constants.OUTPUT_FOLDER+&rsquo;phrase_model&rsquo;))
+    document_collection=[&lsquo; &lsquo;.join(phraser_model[match[&lsquo;complete_match&rsquo;].strip().split()]) for match in document_collection_original]</p>
+<div class="codehilite"><pre>#get rid of stop words
+document_collection_filtered = []
+for text in document_collection:
+    new_text = []
+    for word in text.split():
+        if (word not in set(stopwords.words(&#39;english&#39;)) and (word[0] in string.ascii_uppercase + string.ascii_lowercase)):
+            new_text.append(word)
+    document_collection_filtered.append(&#39; &#39;.join(new_text))
+
+
+
+result_lda_training = train_lda_topic_model_with_mallet(document_collection_filtered,constants.PATH_TO_MALLET,3)
+result=post_process_result_of_lda_topic_model(result_lda_training[&#39;model&#39;],result_lda_training[&#39;corpus&#39;],document_collection_original,document_collection_filtered)
+
+#topic_text = text.read_json(&#39;topics_texts&#39;)
+write_topics_texts_to_file(result[&#39;topic_documents&#39;],&#39;test_output_topic_texts&#39;)
+
+&#39;&#39;&#39;
+#result_lda_training = train_lda_topic_model_with_mallet(document_collection,constants.PATH_TO_MALLET,50)
+
+
+limit=50; start=2; step=3;
+x = range(start, limit, step)
+plt.plot(x, result_lda_training)
+plt.xlabel(&quot;Num Topics&quot;)
+plt.ylabel(&quot;Coherence score&quot;)
+plt.legend((&quot;coherence_values&quot;), loc=&#39;best&#39;)
+plt.savefig(&#39;demo.pdf&#39;)
+
+
+text.write_json(&#39;corpus&#39;, model[&#39;corpus&#39;])
+model[&#39;model&#39;].save(&#39;ldamodel&#39;)
+text.write_json(&#39;plain_texts&#39;, results)
+
+post_processed = post_process_result_of_lda_topic_model(result_lda_training[&#39;model&#39;],result_lda_training[&#39;corpus&#39;],document_collection)
+&#39;&#39;&#39;
 </pre></div></article></body></html>
